# shadow

./: .gitignore  AGENTS.md  deno.json  flake.nix  justfile  plan.md
.codex/: config.toml
.githooks/: pre-commit
docs/: app-testing.md  architecture.md  latency.md  overnight-agents.md  pixel-prep.md  shadow-ui.md  tutorial.md
runtime/: apps.json
rust/: Cargo.toml
rust/deno-core-smoke/: Cargo.toml
rust/deno-core-smoke/src/: main.rs
rust/deno-runtime-smoke/: Cargo.toml  build.rs
rust/deno-runtime-smoke/modules/: main.js  message.js  message.txt
rust/deno-runtime-smoke/src/: main.rs
rust/deno-runtime-snapshot/: Cargo.toml
rust/deno-runtime-snapshot/src/: main.rs
rust/drm-rect/: Cargo.toml
rust/drm-rect/src/: lib.rs  main.rs
rust/init-wrapper/: Cargo.toml
rust/init-wrapper/.cargo/: config.toml
rust/init-wrapper/src/: lib.rs  main.rs
rust/init-wrapper/src/hello_init/: bootstrap.rs  camera.rs  config.rs  diagnostics.rs  entry.rs  mod.rs  payload.rs  payload_probe.rs  product.rs  proof.rs  reboot.rs  storage.rs  support.rs  wifi.rs
rust/runtime-audio-host/: Cargo.toml
rust/runtime-audio-host/js/: bootstrap.js
rust/runtime-audio-host/src/: lib.rs
rust/runtime-camera-host/: Cargo.toml
rust/runtime-camera-host/js/: bootstrap.js
rust/runtime-camera-host/src/: lib.rs
rust/runtime-cashu-host/: Cargo.toml
rust/runtime-cashu-host/js/: bootstrap.js
rust/runtime-cashu-host/src/: lib.rs
rust/runtime-nostr-host/: Cargo.toml
rust/runtime-nostr-host/js/: bootstrap.js
rust/runtime-nostr-host/src/: lib.rs  relay_sync.rs  store.rs
rust/shadow-camera-provider-host/: Cargo.toml  build.rs
rust/shadow-camera-provider-host/src/: android_buffer.rs  android_service.rs  camera_aidl.rs  camera_metadata.rs  hal_containment_probe.rs  hal_probe_support.rs  linux_camera_probe.rs  main.rs
rust/shadow-cashu-host/: Cargo.toml
rust/shadow-cashu-host/src/: lib.rs
rust/shadow-linux-audio-spike/: Cargo.toml
rust/shadow-linux-audio-spike/src/: main.rs
rust/shadow-nostr-host/: Cargo.toml
rust/shadow-nostr-host/src/: daemon.rs  lib.rs  relay_publish.rs  relay_sync.rs  signer.rs  system_prompt.rs
rust/shadow-runtime-host/: Cargo.toml
rust/shadow-runtime-host/src/: main.rs
rust/shadow-runtime-protocol/: Cargo.toml
rust/shadow-runtime-protocol/src/: lib.rs
rust/shadow-sdk/: Cargo.toml
rust/shadow-sdk/src/: app.rs  lib.rs  runtime_host.rs  services.rs
rust/shadow-sdk/src/services/: camera.rs  camera_backend.rs  clipboard.rs  nostr.rs  session_config.rs
rust/shadow-sdk/src/services/nostr/: ipc.rs  mod.rs  store.rs  timeline.rs  types.rs
rust/shadow-sdk/src/services/nostr/timeline/: cache.rs  commands.rs  mod.rs  tests.rs
rust/shadow-sdk/src/ui/: context.rs  mod.rs  runtime.rs  task.rs  theme.rs  widgets.rs
rust/shadow-session/: Cargo.toml
rust/shadow-session/src/: main.rs
rust/shadow-system/: Cargo.toml
rust/shadow-system/js/: bootstrap.js
rust/shadow-system/src/: main.rs  runtime_extensions.rs
rust/shadow-system/src/services/: audio.rs  bootstrap.rs  camera.rs  cashu.rs  clipboard.rs  mod.rs  nostr.rs  system_prompt.rs
rust/shadow-system/src/services/nostr/: daemon.rs  relay_publish.rs  relay_sync.rs  signer.rs
scripts/: agent-brief  artifacts_fetch.sh  assert_repacked_identity.sh  blitz_demo_compositor_smoke.sh  blitz_demo_guest_compositor_smoke.sh  build_drm_rect.sh  build_init_wrapper.sh  build_shadow_session.sh  cf_common.sh  cf_drm_rect.sh  cf_guest_ui_smoke.sh  cf_init_wrapper.sh  cf_kill.sh  cf_launch.sh  cf_logs.sh  cf_prune.sh  cf_repacked_initboot.sh  check_script_inventory.py  ci.sh  cpio_edit.py  dis  generate_sound_demo_fixture.sh  guest_ui_common.sh  init_boot_drm_rect.sh  init_boot_guest_ui.sh  init_boot_repack.sh  init_boot_wrapper.sh  land.sh  nightly.sh  on  operator_cli_smoke.sh  pixel_blitz_demo_drm.sh  pixel_blitz_demo_static_drm_gpu.sh  pixel_blitz_demo_static_drm_gpu_probe.sh  pixel_blitz_demo_static_drm_gpu_softbuffer.sh  (+105 more)
ui/: Cargo.toml  README.md
ui/apps/shadow-blitz-demo/: Cargo.toml
ui/apps/shadow-blitz-demo/src/: app.rs  document.rs  frame.rs  hosted_runtime.rs  lib.rs  log.rs  main.rs  runtime_document.rs  runtime_session.rs
ui/apps/shadow-counter/: Cargo.toml
ui/apps/shadow-counter-guest/: Cargo.toml
ui/apps/shadow-counter-guest/src/: main.rs  wayland.rs
ui/apps/shadow-counter/src/: color.rs  desktop.rs  main.rs  model.rs  wayland.rs
ui/apps/shadow-rust-demo/: Cargo.toml
ui/apps/shadow-rust-demo/src/: main.rs
ui/apps/shadow-rust-timeline/: Cargo.toml
ui/apps/shadow-rust-timeline/src/: cached_data.rs  main.rs  tasks.rs
ui/apps/shadow-rust-timeline/src/screens/: account.rs  explore.rs  mod.rs  note.rs  onboarding.rs  profile.rs  shared.rs  timeline.rs
ui/apps/shadow-rust-timeline/src/tasks/: finish.rs  start.rs
ui/crates/shadow-compositor/: Cargo.toml
ui/crates/shadow-compositor-common/: Cargo.toml
ui/crates/shadow-compositor-common/src/: app_control.rs  control.rs  launch.rs  lib.rs  state_report.rs
ui/crates/shadow-compositor-guest/: Cargo.toml
ui/crates/shadow-compositor-guest/src/: config.rs  control.rs  gpu_scanout.rs  hosted.rs  input.rs  kms.rs  launch.rs  main.rs  media_keys.rs  prompt.rs  render.rs  session.rs  shell.rs  shell_gpu.rs  touch.rs
ui/crates/shadow-compositor-guest/src/handlers/: compositor.rs  dmabuf.rs  mod.rs  xdg_shell.rs
ui/crates/shadow-compositor/src/: control.rs  input.rs  launch.rs  main.rs  prompt.rs  render.rs  shell.rs  state.rs  winit.rs  winit_backend.rs
ui/crates/shadow-compositor/src/handlers/: compositor.rs  mod.rs  xdg_shell.rs
ui/crates/shadow-compositor/src/state/: session_tests.rs
ui/crates/shadow-gpu-smoke/: Cargo.toml
ui/crates/shadow-gpu-smoke/src/: main.rs
ui/crates/shadow-ui-core/: Cargo.toml
ui/crates/shadow-ui-core/src/: app.rs  control.rs  generated_apps.rs  generated_manifest_launch.rs  lib.rs  scene.rs  shell.rs  system_chrome.rs  system_prompt.rs
ui/crates/shadow-ui-desktop/: Cargo.toml
ui/crates/shadow-ui-desktop/src/: main.rs  renderer.rs
ui/crates/shadow-ui-software/src/: lib.rs
(+242 files in other folders)
