[workspace]
resolver = "2"
members = [
    "shadow-cashu-host",
    "shadow-nostr-host",
    "shadow-sdk",
    "shadow-system",
    "shadow-runtime-protocol",
]
default-members = [
    "shadow-system",
]
exclude = [
    "drm-rect",
    "shadow-camera-provider-host",
    "shadow-linux-audio-spike",
    "shadow-session",
    "vendor/temporal_rs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
base64 = "0.22.1"
bip39 = "2.2.0"
cdk = { version = "0.16.0", default-features = false, features = ["wallet"] }
cdk-redb = { version = "0.16.0", default-features = false, features = ["wallet"] }
copypasta = "0.10.2"
deno_core = { version = "=0.393.0", default-features = false }
deno_error = "=0.7.1"
getrandom = "0.2.16"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
libc = "0.2"
nostr = "0.44.2"
nostr-sdk = "0.44.1"
qrcodegen = "1.8.0"
rqrr = "0.10.1"
shadow-cashu-host = { path = "shadow-cashu-host" }
shadow-nostr-host = { path = "shadow-nostr-host" }
shadow-sdk = { path = "shadow-sdk", default-features = false }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shadow-runtime-protocol = { path = "shadow-runtime-protocol" }
tokio = { version = "1.50.0", default-features = false }
v8 = "=146.8.0"

[patch.crates-io]
temporal_rs = { path = "vendor/temporal_rs" }
xilem = { path = "vendor/xilem" }
