[package]
name = "runtime-camera-host"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
deno_core = { version = "=0.393.0", default-features = false, features = ["include_icu_data"] }
deno_error = "=0.7.1"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.50.0", features = ["rt"] }
