[package]
name = "runtime-camera-host"
version.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
deno_core = { workspace = true, features = ["include_icu_data"] }
deno_error.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt"] }
