[package]
name = "runtime-cashu-host"
version.workspace = true
edition.workspace = true

[dependencies]
bip39.workspace = true
cdk.workspace = true
cdk-redb.workspace = true
deno_core = { workspace = true, features = ["include_icu_data"] }
deno_error.workspace = true
getrandom.workspace = true
qrcodegen.workspace = true
serde.workspace = true
serde_json.workspace = true
