[package]
name = "runtime-nostr-host"
version.workspace = true
edition.workspace = true

[dependencies]
deno_core = { workspace = true, features = ["include_icu_data"] }
deno_error.workspace = true
nostr.workspace = true
nostr-sdk.workspace = true
qrcodegen.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["time"] }
