[package]
name = "shadow-camera-provider-host"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[target.'cfg(target_os = "android")'.dependencies]
binder = { package = "android-binder", version = "0.1.1" }
libc = "0.2.184"
