[package]
name = "shadow-linux-audio-spike"
version = "0.1.0"
edition = "2021"

[dependencies]
alsa = "0.9.1"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symphonia = { version = "0.5.4", default-features = false, features = ["mp3", "pcm", "wav"] }
