[package]
name = "shadow-runtime-host"
version.workspace = true
edition.workspace = true

[dependencies]
deno_core = { workspace = true, features = ["include_icu_data", "reactor-tokio"] }
runtime-audio-host.workspace = true
runtime-cashu-host.workspace = true
runtime-camera-host.workspace = true
runtime-nostr-host.workspace = true
shadow-runtime-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt"] }
v8.workspace = true
