[package]
name = "shadow-runtime-host"
version.workspace = true
edition.workspace = true

[dependencies]
deno_core = { workspace = true, features = ["include_icu_data", "reactor-tokio"] }
shadow-sdk = { workspace = true, features = ["runtime-host"] }
shadow-runtime-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt"] }
v8.workspace = true
