[package]
name = "shadow-sdk"
version.workspace = true
edition.workspace = true

[features]
default = []
nostr = ["dep:rusqlite"]

[dependencies]
base64.workspace = true
image = { version = "=0.25.6", default-features = false, features = ["jpeg", "png"] }
qrcodegen.workspace = true
rqrr.workspace = true
rusqlite = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
shadow-runtime-protocol.workspace = true
