[package]
name = "shadow-system"
version.workspace = true
edition.workspace = true

[dependencies]
bip39.workspace = true
cdk.workspace = true
cdk-redb.workspace = true
deno_core = { workspace = true, features = ["include_icu_data", "reactor-tokio"] }
deno_error.workspace = true
getrandom.workspace = true
libc.workspace = true
nostr.workspace = true
nostr-sdk.workspace = true
qrcodegen.workspace = true
shadow-sdk = { workspace = true, features = ["nostr"] }
shadow-runtime-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }
v8.workspace = true
