[package]
name = "shadow-system"
version.workspace = true
edition.workspace = true

[dependencies]
deno_core = { workspace = true, features = ["include_icu_data", "reactor-tokio"] }
deno_error.workspace = true
libc.workspace = true
nostr.workspace = true
nostr-sdk.workspace = true
shadow-cashu-host.workspace = true
shadow-sdk = { workspace = true, features = ["camera", "clipboard", "nostr"] }
shadow-runtime-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }
v8.workspace = true
