[package]
name = "shadow-blitz-demo"
version.workspace = true
edition.workspace = true

[features]
default = []
cpu = [
  "anyrender_vello_cpu/softbuffer_window_renderer",
  "dep:blitz-shell",
  "dep:winit",
]
gpu = [
  "dep:anyrender_vello",
  "dep:wgpu",
  "dep:pollster",
  "dep:env_logger",
  "dep:blitz-shell",
  "dep:winit",
]
hosted_gpu = ["dep:anyrender_vello"]
host_system_fonts = ["blitz-dom/system_fonts"]

[dependencies]
anyrender = "0.8"
anyrender_vello = { version = "0.8", optional = true }
anyrender_vello_cpu = { version = "0.10", optional = true }
blitz-dom = { git = "https://github.com/DioxusLabs/blitz", rev = "781ae63fdb6e76baa0969ba8cbce557327c7dfca", package = "blitz-dom", default-features = false }
blitz-html = { git = "https://github.com/DioxusLabs/blitz", rev = "781ae63fdb6e76baa0969ba8cbce557327c7dfca", package = "blitz-html", default-features = false }
blitz-paint = { git = "https://github.com/DioxusLabs/blitz", rev = "781ae63fdb6e76baa0969ba8cbce557327c7dfca", package = "blitz-paint", default-features = false }
blitz-shell = { git = "https://github.com/DioxusLabs/blitz", rev = "781ae63fdb6e76baa0969ba8cbce557327c7dfca", package = "blitz-shell", default-features = false, features = ["data-uri"], optional = true }
blitz-traits = { git = "https://github.com/DioxusLabs/blitz", rev = "781ae63fdb6e76baa0969ba8cbce557327c7dfca", package = "blitz-traits", default-features = false }
data-url = "0.3.2"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png"] }
libc = "0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shadow-sdk = { path = "../../../rust/shadow-sdk" }
shadow-runtime-protocol = { path = "../../../rust/shadow-runtime-protocol" }
shadow-ui-core = { path = "../../crates/shadow-ui-core" }
winit = { version = "=0.31.0-beta.2", default-features = false, features = ["wayland"], optional = true }
wgpu = { version = "28.0.0", optional = true }
pollster = { version = "0.4.0", optional = true }
env_logger = { version = "0.11.8", optional = true }
