[package]
name = "shadow-rust-demo"
version.workspace = true
edition.workspace = true

[dependencies]
font8x8 = { workspace = true }
shadow-ui-core = { path = "../../crates/shadow-ui-core" }
shadow-sdk = { path = "../../../rust/shadow-sdk", features = ["camera"] }
softbuffer = "0.4.8"
winit = { version = "=0.31.0-beta.2", default-features = false, features = ["wayland"] }
