[package]
name = "shadow-compositor-guest"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
anyrender = "0.8"
anyrender_vello = { version = "0.8" }
ash = "0.38"
chrono.workspace = true
drm = "0.14.1"
drm-sys = "0.8"
evdev = "0.13.2"
font8x8.workspace = true
kurbo = "0.13"
libc = "0.2"
peniko = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shadow-blitz-demo = { path = "../../apps/shadow-blitz-demo", default-features = false, features = ["hosted_gpu"] }
shadow-compositor-common = { path = "../shadow-compositor-common" }
shadow-runtime-protocol = { path = "../../../rust/shadow-runtime-protocol" }
shadow-ui-core = { path = "../shadow-ui-core" }
shadow-ui-software = { path = "../shadow-ui-software" }
smithay = { version = "0.7.0", default-features = false, features = ["desktop", "wayland_frontend"] }
tracing.workspace = true
tracing-subscriber.workspace = true
wgpu.workspace = true
wgpu_context = "0.4.0"

[dev-dependencies]
tempfile = "3.27"
