[package]
name = "shadow-gpu-smoke"
version.workspace = true
edition.workspace = true

[dependencies]
kurbo = "0.13"
pollster.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
vello = { version = "0.8.0", features = ["wgpu"] }
wgpu.workspace = true
wgpu_context = "0.4.0"
