[package]
name = "shadow-gpu-smoke"
version.workspace = true
edition.workspace = true

[dependencies]
ash = "0.38.0"
drm = "0.14.1"
kurbo = "0.13"
libc = "0.2"
pollster.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
vello = { version = "0.8.0", features = ["wgpu"] }
wgpu.workspace = true
wgpu_context = "0.4.0"
